--- a/Client/package.json
+++ b/Client/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~2.0.0",
     "haversine-distance": "^1.2.3",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
