--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
         "express": "^4.21.2",
         "express-validator": "^7.2.0",
         "graphql": "^16.10.0",
+        "graphql-depth-limit": "^1.1.0",
         "graphql-tools": "^9.0.11",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.3.4",
