--- a/Client/package.json
+++ b/Client/package.json
@@ -42,6 +42,7 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.18.0",
+    "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.16.7",
