--- a/Client/package.json
+++ b/Client/package.json
@@ -43,11 +43,13 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.18.0",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0"
   },
