--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -24,20 +25,20 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.0",
-    "expo-font": "~13.0.2",
-    "expo-image-picker": "^16.0.4",
-    "expo-status-bar": "~2.0.0",
+    "expo": "latest",
+    "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-status-bar": "~2.0.1",
     "haversine-distance": "^1.2.3",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.22.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -48,7 +49,7 @@
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0"
