--- a/Client/package.json
+++ b/Client/package.json
@@ -28,6 +28,7 @@
     "expo": "latest",
     "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
+    "expo-location": "^18.0.8",
     "expo-status-bar": "~2.0.1",
     "haversine-distance": "^1.2.3",
     "lodash": "^4.17.21",
