--- a/Client/package.json
+++ b/Client/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-community/slider": "^4.5.5",
-    "@react-native-picker/picker": "^2.9.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -25,38 +25,39 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "expo": "latest",
-    "expo-font": "~13.0.4",
-    "expo-image-picker": "~16.0.6",
-    "expo-location": "^18.0.8",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.0",
+    "expo-font": "~13.3.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.4",
+    "expo-status-bar": "~2.2.3",
     "haversine-distance": "^1.2.3",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "1.18.0",
-    "react-native-modal": "^13.0.1",
+    "react-native-maps": "1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0"
   },
   "private": true
 }
