--- a/Client/package.json
+++ b/Client/package.json
@@ -19,17 +19,19 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
-    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@whitespectre/rn-modal-presenter": "^1.1.3",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "expo": "^53.0.0",
-    "expo-font": "~13.3.0",
+    "expo": "~53.0.7",
+    "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.4",
+    "expo-media-library": "^17.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-video": "^2.1.8",
     "haversine-distance": "^1.2.3",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
