--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,9 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "expo": "~53.0.7",
+    "expo-av": "^15.1.4",
+    "expo-camera": "^16.1.6",
+    "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.4",
@@ -40,6 +43,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-draggable-grid": "^2.2.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
