--- a/Client/package.json
+++ b/Client/package.json
@@ -60,6 +60,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0"
   },
