--- a/Server/package.json
+++ b/Server/package.json
@@ -26,6 +26,7 @@
         "graphql-depth-limit": "^1.1.0",
         "graphql-tools": "^9.0.11",
         "jsonwebtoken": "^9.0.2",
+        "luxon": "^3.6.1",
         "mongoose": "^7.3.4",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
