--- a/Server/package.json
+++ b/Server/package.json
@@ -22,10 +22,12 @@
         "express-validator": "^7.2.0",
         "ffmpeg-static": "^5.2.0",
         "fluent-ffmpeg": "^2.1.3",
+        "franc": "^6.2.0",
         "graphql": "^16.10.0",
         "graphql-depth-limit": "^1.1.0",
         "graphql-tools": "^9.0.11",
         "jsonwebtoken": "^9.0.2",
+        "langs": "^2.0.0",
         "luxon": "^3.6.1",
         "mongoose": "^7.3.4",
         "morgan": "^1.10.0",
