--- a/Client/app.json
+++ b/Client/app.json
@@ -14,12 +14,15 @@
     },
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.danielkmetz.activitypal",
       "infoPlist": {
-        "NSCameraUsageDescription": "We use your camera to broadcast live video.",
-        "NSMicrophoneUsageDescription": "We use your microphone to broadcast live audio.",
+        "NSCameraUsageDescription": "We use your camera to let you capture photos and videos.",
+        "NSMicrophoneUsageDescription": "We use your microphone when recording video.",
+        "NSPhotoLibraryUsageDescription": "We need access to your photo library to attach photos and videos.",
+        "NSPhotoLibraryAddUsageDescription": "We need access to save media you create.",
+        "NSLocationWhenInUseUsageDescription": "ActivityPal uses your location to show nearby activities and events on the map.",
         "ITSAppUsesNonExemptEncryption": false
-      },
-      "bundleIdentifier": "com.danielkmetz.activitypal"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -27,10 +30,11 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
-        "CAMERA",
-        "RECORD_AUDIO",
         "android.permission.CAMERA",
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.READ_MEDIA_VIDEO",
+        "android.permission.READ_EXTERNAL_STORAGE"
       ]
     },
     "web": {
@@ -49,7 +53,16 @@
         {
           "cameraPermission": "We need access to your camera to let you create stories and record videos."
         }
-      ]
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "cameraPermission": "Allow $(PRODUCT_NAME) to use your camera.",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to use your microphone when recording video."
+        }
+      ],
+      "expo-media-library"
     ]
   }
 }
