--- a/Client/package.json
+++ b/Client/package.json
@@ -9,19 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@api.video/react-native-livestream": "^2.0.2",
     "@apollo/client": "^3.13.8",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/slider": "4.5.6",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
-    "@rneui/base": "^4.0.0-rc.8",
-    "@rneui/themed": "^4.0.0-rc.8",
     "@whitespectre/rn-modal-presenter": "^1.1.3",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -39,7 +38,6 @@
     "expo-status-bar": "~2.2.3",
     "expo-updates": "^0.28.17",
     "expo-video": "^2.1.8",
-    "ffmpeg-kit-react-native": "^6.0.2",
     "graphql": "^16.11.0",
     "haversine-distance": "^1.2.3",
     "lodash": "^4.17.21",
@@ -47,23 +45,23 @@
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-grid": "^2.2.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-incall-manager": "^4.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-nodemediaclient": "^0.3.5",
     "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "^4.0.3",
@@ -72,7 +70,11 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0"
+    "@babel/core": "^7.26.0",
+    "@types/react": "^19.1.10",
+    "@types/react-native": "^0.73.0",
+    "eas-cli": "^16.17.4",
+    "typescript": "^5.9.2"
   },
   "private": true
 }
