--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@whitespectre/rn-modal-presenter": "^1.1.3",
