--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@whitespectre/rn-modal-presenter": "^1.1.3",
+    "amazon-ivs-react-native-player": "^1.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
