--- a/Client/package.json
+++ b/Client/package.json
@@ -34,6 +34,7 @@
     "expo-dev-client": "~5.2.4",
     "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
+    "expo-haptics": "^15.0.7",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.4",
     "expo-media-library": "^17.1.6",
