--- a/Client/package.json
+++ b/Client/package.json
@@ -36,6 +36,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "^15.0.7",
     "expo-image-picker": "~16.1.4",
+    "expo-localization": "^17.0.8",
     "expo-location": "~18.1.4",
     "expo-media-library": "^17.1.6",
     "expo-status-bar": "~2.2.3",
